force-app/main/default/objects/Order_Support_Settings__c/Order_Support_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting stores the various configurations for Order Support Cases</description>
    <label>Order Support Settings</label>
</CustomObject>