force-app/main/default/objects/Order_Support_Settings__c/fields/Dell_EMC_Logo_Document_id__c.field-meta.xml
<CustomField>
    <fullName>Dell_EMC_Logo_Document_id__c</fullName>
    <description>Store the document id for the Dell EMC logo to be used in visualforce email template</description>
    <label>Dell EMC Logo Document id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>