force-app/main/default/objects/Order_Support_Settings__c/fields/Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Id__c</fullName>
    <description>Store the organization id here</description>
    <label>Organization Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>