force-app/main/default/objects/Order_Support_Settings__c/fields/Organization_Instance__c.field-meta.xml
<CustomField>
    <fullName>Organization_Instance__c</fullName>
    <description>Stores the org instance</description>
    <inlineHelpText>Get the URL of the current page. Extract the instance from the same &amp; save it here.
e.g.If the URL is &apos;https://cs53.salesforce.com/setup/ui/editCustomSettingsData.apexp&apos;, the instance is &apos;cs53&apos;</inlineHelpText>
    <label>Organization Instance</label>
    <length>8</length>
    <type>Text</type>
</CustomField>